# BookRecommender

./: README.md  pyproject.toml
data/: gr_books.csv
notebooks/: eda.ipynb
